Fixes overflow on mobile

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1048,6 +1048,9 @@ input[type="search"]::-webkit-search-decoration {
 		width: 100%;
 		margin-bottom: 5px;
 	}
+	.blog-post-list .blog-post-feature-image-wrap {
+		margin-right: 0;
+	}
 	.blog-post-feature-image-wrap {
 		width: 100%;
 	}
